Add classesOnly parameter
